--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/mgilangjanuar/gyarados#readme",
   "devDependencies": {
+    "@types/express": "^4.17.8",
     "@types/node": "^14.11.5",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
@@ -31,5 +32,8 @@
     "rimraf": "^3.0.2",
     "tslint": "^6.1.3",
     "typescript": "^4.0.3"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
