--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
   },
   "homepage": "https://github.com/mgilangjanuar/gyarados#readme",
   "devDependencies": {
+    "@types/body-parser": "^1.19.0",
+    "@types/compression": "^1.7.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.8",
     "@types/node": "^14.11.5",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
@@ -30,10 +34,15 @@
     "nodemon": "^2.0.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
+    "source-map-support": "^0.5.19",
     "tslint": "^6.1.3",
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1"
   }
 }
