[wip] init model index

--- a/.env-example
+++ b/.env-example
@@ -1,2 +1,14 @@
 ENVIRONMENT=develop
 PORT=6606
+
+# db
+DB_HOST=
+DB_PORT=
+DB_USERNAME=
+DB_PASSWORD
+DB_NAME=
+DB_USE_SSL=
+DB_CERT=
+DB_KEY=
+DB_CA=
+DB_REJECT_UNAUTHORIZED=
